# gauge

./: .env.example  .gitignore  DASHBOARD_PLANS.md  DEPLOYMENT.md  Procfile  QUICKSTART.md  README.md  YTD_TRACKING.md  collect_metrics.py  docker-compose.yml  nixpacks.toml  pyproject.toml  requirements.txt  schema.sql  schema_ytd_goals.sql  set_goal.py  setup_database.py  test_credentials.py
docs/dashboards/: executive_summary.md  template_drilldown.md  template_health.md
grafana/: dockerfile
grafana/dashboards/: dashboards.yaml
grafana/dashboards/templates/: executive_summary.json  template_drilldown.json  template_health.json
grafana/datasources/: datasources.yml
ingest/: .env.example  README.md  index.ts  package.json
ingest/db/: client.test.ts  client.ts  errors.ts  index.ts  types.ts
ingest/db/schemas/: gauge.sql
ingest/db/test-fixtures/: sample-earnings.ts  sample-templates.ts
ingest/railway/: client.ts  types.ts
ingest/railway/queries/: earnings.ts  templates.ts  workspace.ts
ingest/utils/: config.ts  logger.ts
